minor fix for overflow and flex

--- a/src/components/forms/controls/RadioGroupAsCards/RadioGroupAsCards.module.scss
+++ b/src/components/forms/controls/RadioGroupAsCards/RadioGroupAsCards.module.scss
@@ -19,6 +19,7 @@
     display: flex;
     flex-direction: row;
     gap: bk.rem-from-px(16);
+    flex-wrap: wrap;
 
     // Set this to allow wrapping:
     //flex-wrap: wrap;
@@ -39,8 +40,7 @@
       flex: 0 0 auto;
       overflow: visible;
       contain: none;
-      inline-size: bk.rem-from-px(190);
-      block-size: bk.rem-from-px(90);
+      inline-size: bk.rem-from-px(200);
       flex-grow: 0 0 auto;
       user-select: none;
       cursor: pointer;
@@ -108,7 +108,7 @@
         min-inline-size: 0;
 
         display: -webkit-box;
-        -webkit-line-clamp: 3;
+        -webkit-line-clamp: 4;
         -webkit-box-orient: vertical;
 
         overflow: hidden;
